fix quick settings button alignment and i18n

--- a/res/css/structures/_QuickSettingsButton.scss
+++ b/res/css/structures/_QuickSettingsButton.scss
@@ -20,7 +20,7 @@ limitations under the License.
     height: 32px;
     border-radius: 8px;
     position: relative;
-    margin: 12px 0 12px 16px;
+    margin: 12px auto;
 
     &::before {
         content: "";
